<resources>
    <string name="app_name">Calculator</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">&#215;</string>
    <string name="divide">&#247;</string>
    <string name="l_paranthesis">(</string>
    <string name="r_paranthesis">)</string>
    <string name="equals">=</string>
    <string name="clear">C</string>
    <string name="decimal">.</string>
    <string name="power">^</string>
    <string name="display"><h2>Enter a value</h2></string>
    <string name="backSpace">⌫</string>
</resources>