<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="414dp"
        android:layout_height="269dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/clear_All"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:textColor="#ffffff"
                android:background="#3D3d3d"
                android:onClick="clearBTN"
                android:text="@string/clear"
                android:textSize="30sp" />

            <Button
                android:id="@+id/start"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:textColor="#ffffff"
                android:background="#3D3d3d"
                android:onClick="startBTN"
                android:text="@string/l_paranthesis"
                android:textSize="30sp" />

            <Button
                android:id="@+id/end"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:textColor="#ffffff"
                android:background="#3D3d3d"
                android:onClick="endBTN"
                android:text="@string/r_paranthesis"
                android:textSize="30sp" />

            <Button
                android:id="@+id/divide"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:textColor="#ffffff"
                android:background="#3D3d3d"
                android:onClick="divideBTN"
                android:text="@string/divide"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/seven"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:textColor="#ffffff"
                android:background="#616161"
                android:onClick="sevenBTN"
                android:text="@string/seven"
                android:textSize="30sp" />

            <Button
                android:id="@+id/eight"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:textColor="#ffffff"
                android:background="#616161"
                android:onClick="eightBTN"
                android:text="@string/eight"
                android:textSize="30sp" />

            <Button
                android:id="@+id/nine"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:textColor="#ffffff"
                android:background="#616161"
                android:onClick="nineBTN"
                android:text="@string/nine"
                android:textSize="30sp" />

            <Button
                android:id="@+id/multiply"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:textColor="#ffffff"
                android:background="#3D3d3d"
                android:onClick="multiplyBTN"
                android:text="@string/multiply"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/four"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:textColor="#ffffff"
                android:background="#616161"
                android:onClick="fourBTN"
                android:text="@string/four"
                android:textSize="30sp" />

            <Button
                android:id="@+id/five"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:textColor="#ffffff"
                android:background="#616161"
                android:onClick="fiveBTN"
                android:text="@string/five"
                android:textSize="30sp" />

            <Button
                android:id="@+id/six"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:textColor="#ffffff"
                android:background="#616161"
                android:onClick="sixBTN"
                android:text="@string/six"
                android:textSize="30sp" />

            <Button
                android:id="@+id/minus"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:textColor="#ffffff"
                android:background="#3D3d3d"
                android:onClick="minusBTN"
                android:text="@string/minus"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/one"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:textColor="#ffffff"
                android:background="#616161"
                android:onClick="oneBTN"
                android:text="@string/one"
                android:textSize="30sp" />

            <Button
                android:id="@+id/two"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:textColor="#ffffff"
                android:background="#616161"
                android:onClick="twoBTN"
                android:text="@string/two"
                android:textSize="30sp" />

            <Button
                android:id="@+id/three"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:textColor="#ffffff"
                android:background="#616161"
                android:onClick="threeBTN"
                android:text="@string/three"
                android:textSize="30sp" />

            <Button
                android:id="@+id/plus"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:textColor="#ffffff"
                android:background="#3D3d3d"
                android:onClick="plusBTN"
                android:text="@string/plus"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/power"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:textColor="#ffffff"
                android:background="#616161"
                android:onClick="powerBTN"
                android:text="@string/power"
                android:textSize="30sp" />

            <Button
                android:id="@+id/zero"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:textColor="#ffffff"
                android:background="#616161"
                android:onClick="zeroBTN"
                android:text="@string/zero"
                android:textSize="30sp" />

            <Button
                android:id="@+id/decimal"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:textColor="#ffffff"
                android:background="#616161"
                android:onClick="decimalBTN"
                android:text="@string/decimal"
                android:textSize="30sp" />

            <Button
                android:id="@+id/equals"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:textColor="#ffffff"
                android:background="#3D3d3d"
                android:onClick="equalsBTN"
                android:text="@string/equals"
                android:textSize="30sp" />
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/enter"
        android:layout_width="418dp"
        android:layout_height="102dp"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="4dp"
        android:gravity="end"
        android:hint="@string/display"
        android:inputType="textPersonName"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.668" />

    <Button
        android:id="@+id/clear"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="103dp"
        android:layout_height="61dp"
        android:layout_marginEnd="8dp"
        android:onClick="backspaceBTN"
        android:text="@string/backSpace"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
